still working on safari issue

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -43,6 +43,7 @@
   color: #ffffff;
   border: 1px solid #ffffff;
   padding: 10px 10px;
+  text-align: center;
   font-size: 30px;
   transition: all 0.2s ease-in-out;
 }
